--- a/SFSimulator.Web/src/index.html
+++ b/SFSimulator.Web/src/index.html
@@ -1,11 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta name="title" content="SFSimulator">
+  <meta name="description" content="SFSimulator is a tool that allows players in the Shakes & Fidget game to simulate future progress">
+  <meta name="keywords" content="sfsimulator, sfgame, shakes and fidget, shakes fidget, tool for shakes and fidget">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+  <meta name="author" content="Ernest Koguc">
   <meta charset="utf-8">
   <title>SFSimulator</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/sfsim.ico">
+  <link rel="icon" type="image/x-icon" href="assets/sfsimulator.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
