Added functionality to increase exp and gold guild bonus and scrapbook after defeating a raid. Added polling runes amount from SFTools Adjusted Simulation Result view

--- a/SFSimulator.Frontend/wwwroot/index.html
+++ b/SFSimulator.Frontend/wwwroot/index.html
@@ -40,7 +40,8 @@
 
 <script>
     window.addEventListener('message', event => {
-        if (event.origin.indexOf('sftools.mar21.eu') != -1)
+        if (event.origin.indexOf('sftools.mar21.eu') != -1) {
             DotNet.invokeMethodAsync('SFSimulator.Frontend', 'PostSfToolsMessage', event.data)
+        }
     });
 </script>
