Added missing fields in simulation options view Added favicon

--- a/SFSimulator.Frontend/wwwroot/index.html
+++ b/SFSimulator.Frontend/wwwroot/index.html
@@ -8,10 +8,9 @@
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="favicon.svg" />
     <link href="SFSimulator.Frontend.styles.css" rel="stylesheet" />
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=5.2.2"></script>
-    <script src="_content/BlazorAnimation/blazorAnimationInterop.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0"></script>
