--- a/SFSimulator.Frontend/wwwroot/index.html
+++ b/SFSimulator.Frontend/wwwroot/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
     <head>
@@ -20,12 +20,13 @@
     </head>
 
     <body>
-        <div id="app" style="height: 100%; width: 100%;">
-            <svg class="loading-progress">
-                <circle r="40%" cx="50%" cy="50%" />
-                <circle r="40%" cx="50%" cy="50%" />
-            </svg>
-            <div class="loading-progress-text"></div>
+        <div id="app" class="h-full w-full">
+            <div class="flex h-full w-full flex-col items-center justify-center bg-[rgba(0,0,0,0.6)] backdrop-blur-sm">
+                <img src="favicon.svg" width="500" height="500"/>
+                <div class="progress-bar">
+                    <div class="progress-bar-value"></div>
+                </div>
+            </div>
         </div>
 
         <div id="blazor-error-ui">
