Added manual page Updated depedencies Disabled dungeon and context logging for release

--- a/SFSimulator.Frontend/wwwroot/index.html
+++ b/SFSimulator.Frontend/wwwroot/index.html
@@ -1,23 +1,23 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>SFSimulator.Frontend</title>
-        <base href="/" />
-        <link rel="stylesheet" href="app.output.css" />
-        <link rel="icon" type="image/png" href="favicon.svg" />
-        <link href="SFSimulator.Frontend.styles.css" rel="stylesheet" />
-        <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=5.2.2"></script>
-        <script src="_framework/blazor.webassembly.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4/dist/chart.umd.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0"></script>
-        <script src="chart-scripts.js"></script>
-        <!--this should be deleted in case of going to production TODO TODO TODO-->
-        <meta http-equiv="cache-control" content="max-age=0" />
-        <meta http-equiv="cache-control" content="no-cache" />
-    </head>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SFSimulator.Frontend</title>
+    <base href="/" />
+    <link rel="stylesheet" href="app.output.css" />
+    <link rel="icon" type="image/png" href="favicon.svg" />
+    <link href="SFSimulator.Frontend.styles.css" rel="stylesheet" />
+    <script src="_framework/blazor.webassembly.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4/dist/chart.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0"></script>
+    <script src="chart-scripts.js"></script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.min.js"></script>
+    <!--this should be deleted in case of going to production TODO TODO TODO-->
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+</head>
 
     <body>
         <div id="app" class="h-full w-full">
