Fixed scrapbook service not counting scrapbook fillness propperly Added support for attributes from calendar Fixed time machine giving experience before level 125 Fixed guild bonus not increasing properly

--- a/SFSimulator.Frontend/wwwroot/index.html
+++ b/SFSimulator.Frontend/wwwroot/index.html
@@ -15,8 +15,8 @@
     <script src="chart-scripts.js"></script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.min.js"></script>
     <!--this should be deleted in case of going to production TODO TODO TODO-->
-    <meta http-equiv="cache-control" content="max-age=0" />
-    <meta http-equiv="cache-control" content="no-cache" />
+    <!--<meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />-->
 </head>
 
     <body>
