--- a/SFSimulator.Frontend/wwwroot/index.html
+++ b/SFSimulator.Frontend/wwwroot/index.html
@@ -7,7 +7,7 @@
     <title>SFSimulator.Frontend</title>
     <base href="/" />
     <link rel="stylesheet" href="app.output.css" />
-    <link rel="icon" type="image/png" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <link href="SFSimulator.Frontend.styles.css" rel="stylesheet" />
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4/dist/chart.umd.min.js"></script>
@@ -22,7 +22,7 @@
     <body>
         <div id="app" class="h-full w-full">
             <div class="flex h-full w-full flex-col items-center justify-center bg-[rgba(0,0,0,0.6)] backdrop-blur-sm">
-                <img src="favicon.svg" width="500" height="500"/>
+                <div class="progress-bar-image h-[500px] w-[500px]"></div>
                 <div class="progress-bar">
                     <div class="progress-bar-value"></div>
                 </div>
