Converted favicon to png

--- a/SFSimulator.Frontend/wwwroot/index.html
+++ b/SFSimulator.Frontend/wwwroot/index.html
@@ -7,7 +7,7 @@
     <title>SFSimulator.Frontend</title>
     <base href="/" />
     <link rel="stylesheet" href="app.output.css" />
-    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <link href="SFSimulator.Frontend.styles.css" rel="stylesheet" />
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4/dist/chart.umd.min.js"></script>
