--- a/SFSimulator.Frontend/wwwroot/index.html
+++ b/SFSimulator.Frontend/wwwroot/index.html
@@ -18,9 +18,11 @@
     <body>
         <div id="app" class="h-full w-full">
             <div class="flex h-full w-full flex-col items-center justify-center bg-[rgba(0,0,0,0.6)] backdrop-blur-sm">
-                <div class="progress-bar-image h-[500px] w-[500px]"></div>
-                <div class="progress-bar">
-                    <div class="progress-bar-value"></div>
+                <div class="flex h-full w-full flex-col items-center justify-center bg-[rgba(0,0,0,0.6)]">
+                    <div class="progress-bar-image"></div>
+                    <div class="progress-bar">
+                        <div class="progress-bar-value"></div>
+                    </div>
                 </div>
             </div>
         </div>
