--- a/SFSimulator.Frontend/wwwroot/index.html
+++ b/SFSimulator.Frontend/wwwroot/index.html
@@ -14,6 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0"></script>
     <script src="chart-scripts.js"></script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.min.js"></script>
+    <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </head>
     <body>
         <div id="app" class="h-full w-full">
