Updated meta tags Added robots.txt and sitemap.xml files for SEO

--- a/SFSimulator.Frontend/wwwroot/index.html
+++ b/SFSimulator.Frontend/wwwroot/index.html
@@ -4,7 +4,30 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SFSimulator.Frontend</title>
+
+    <!-- Primary SEO Meta Tags -->
+    <title>SF Simulator - Shakes & Fidget Progress Simulation Tool</title>
+    <meta name="title" content="SF Simulator - Shakes & Fidget Progress Simulation Tool">
+    <meta name="description" content="SF Simulator lets you simulate your progress in the game Shakes & Fidget (sfgame). Plan your character’s build, optimize stats, and explore strategies.">
+    <meta name="keywords" content="SF Simulator, Shakes and Fidget, sfgame, simulator, stats optimizer, strategy tool, RPG calculator, browser game, Shakes & Fidget tools">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sfsimulator.xyz/">
+    <meta property="og:title" content="SF Simulator - Shakes & Fidget Progress Tool">
+    <meta property="og:description" content="A free online simulator to plan your Shakes & Fidget character progression, optimize stats, and test strategies.">
+    <meta property="og:image" content="https://sfsimulator.xyz/images/sfsimulator-preview.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://sfsimulator.xyz/">
+    <meta property="twitter:title" content="SF Simulator - Shakes & Fidget Progress Tool">
+    <meta property="twitter:description" content="Simulate and optimize your Shakes & Fidget character with SF Simulator. Plan your build and explore strategies.">
+    <meta property="twitter:image" content="https://sfsimulator.xyz/images/sfsimulator-preview.png">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://sfsimulator.xyz/" />
+
     <base href="/" />
     <link rel="stylesheet" href="app.output.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
